consistent author naming

--- a/book.bib
+++ b/book.bib
@@ -125,7 +125,7 @@
 
 
 @Article{Borsboom2013,
-  author   = {Borsboom, Denny and Cramer, Ang{\'{e}}lique O J},
+  author   = {Borsboom, D. and Cramer, Ang{\'{e}}lique O J},
   title    = {{Network analysis: An integrative approach to the structure of psychopathology}},
   journal  = {Annual Review of Clinical Psychology},
   year     = {2013},
@@ -138,7 +138,7 @@
 }
 
 @article{Borsboom2017,
-  author = {Borsboom, Denny},
+  author = {Borsboom, D.},
   doi = {10.1002/wps.20375},
   journal = {World Psychiatry},
   title = {{A network theory of mental disorders}},
