consistent author names

--- a/book.bib
+++ b/book.bib
@@ -517,7 +517,7 @@
 }
 
 @Article{Epskamp2018a,
-  author        = {Epskamp, Sacha and Borsboom, Denny and Fried, Eiko I.},
+  author        = {Epskamp, Sacha and Borsboom, D. and Fried, Eiko I.},
   title         = {{Estimating psychological networks and their accuracy: A tutorial paper}},
   journal       = {Behavior Research Methods},
   year          = {2018},
@@ -534,7 +534,7 @@
 }
 
 @article{Epskamp2018b,
-  author = {Epskamp, Sacha and Borsboom, Denny and Fried, Eiko I.},
+  author = {Epskamp, Sacha and Borsboom, D. and Fried, Eiko I.},
   doi = {10.3758/s13428-017-0862-1},
   eprint = {1604.08462},
   isbn = {1554-3528 (Electronic) 1554-351X (Linking)},
@@ -550,7 +550,7 @@
 }
 
 @Article{Epskamp2012,
-  author  = {Epskamp, Sacha and Cramer, Ang\'elique O. J. and Waldorp, Lourens J. and Schmittmann,Verena D. and Borsboom, Denny},
+  author  = {Epskamp, Sacha and Cramer, Ang\'elique O. J. and Waldorp, Lourens J. and Schmittmann,Verena D. and Borsboom, D.},
   title   = {qgraph: {N}etwork visualizations of relationships in psychometric data},
   journal = {Journal of Statistical Software},
   year    = {2012},
@@ -928,7 +928,7 @@
 
 
 @Article{Kossakowski2017,
-  author          = {Kossakowski, Jolanda J. and Groot, Peter C. and Haslbeck, Jonas M. B. and Borsboom, Denny and Wichers, Marieke},
+  author          = {Kossakowski, Jolanda J. and Groot, Peter C. and Haslbeck, Jonas M. B. and Borsboom, D. and Wichers, Marieke},
   title           = {{Data from ‘critical slowing down as a personalized early warning signal for depression'}},
   journal         = {Journal of Open Psychology Data},
   year            = {2017},
